k6-test-main/ebay/ebay/ebay-policies/other-namespaces/disallow-host-network-namespaces-dev1.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-host-network-namespace-dev1
  annotations:
    policies.kyverno.io/title: Disallow Host Namespaces
    policies.kyverno.io/description: >-
      Host namespaces (Process ID namespace, Inter-Process Communication namespace, and
      network namespace) allow access to shared information and can be used to elevate
      privileges. Pods should not be allowed access to host namespaces. This policy ensures
      fields which make use of these host namespaces are unset or set to `false`.
spec:
  validationFailureAction: enforce
  background: false
  rules:
    - name: disallow-host-network-namespace
      exclude:
        any:
        - resources:
            kinds:
            - Pod
            selector:
              matchExpressions:
                - key: environment.tess.io/name
                  operator: In
                  values:
                  - dev
                  - feature
                  - lnp
                  - staging
                  - stagingpci
                  - stagingrnpci
                - key: application.tess.io/name
                  operator: In
                  values:
                  - tfap-lnp1
      match:
        any:
        - resources:
            kinds:
              - Pod
            namespaces:
              - tfap-lnp1
            selector:
              matchExpressions:
                - key: environment.tess.io/name
                  operator: In
                  values:
                  - dev
                  - feature
                  - lnp
                  - staging
                  - stagingpci
                  - stagingrnpci
      validate:
        message: >-
          Sharing the host namespaces is disallowed. The fields spec.hostNetwork,
          spec.hostIPC, and spec.hostPID must be unset or set to `false`.
        pattern:
          spec:
            =(hostNetwork): "false"
